--- a/test2.html
+++ b/test2.html
@@ -12,7 +12,16 @@
   <body>
     <h1>Hello, world!</h1>
 
-    <h5>{{ safehtml .Content }}</h5>
+    <h2>こんにちは</h2>
+
+    <ul>
+        <li><a href="#">Dir</a></li>
+        <li><a href="#">Dir2</a></li>
+        <ul>
+           <li><a href="#">File</a></li>
+           <li><a href="#">FIle2</a></li>
+        </ul>
+    </ul>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="js/jquery.min.js"></script>
