--- a/test2.html
+++ b/test2.html
@@ -8,20 +8,31 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/sticker-footer.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+      
+    <!-- Begin page content -->
+    <div class="container">
+      <div class="mt-1">
+        <h1>Hello, world!</h1>
+      </div>
+      <h2>こんにちは</h2>
+      <ul>
+          <li><a href="#">Dir</a></li>
+          <li><a href="#">Dir2</a></li>
+          <ul>
+             <li><a href="#">File</a></li>
+             <li><a href="#">FIle2</a></li>
+          </ul>
+      </ul>
+    </div>
 
-    <h2>こんにちは</h2>
-
-    <ul>
-        <li><a href="#">Dir</a></li>
-        <li><a href="#">Dir2</a></li>
-        <ul>
-           <li><a href="#">File</a></li>
-           <li><a href="#">FIle2</a></li>
-        </ul>
-    </ul>
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted">Place sticky footer content here.</span>
+      </div>
+    </footer>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="js/jquery.min.js"></script>
