--- a/test2.html
+++ b/test2.html
@@ -1,3 +1,4 @@
+<!-- ref https://getbootstrap.com/docs/4.0/examples/blog/ -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,6 +13,7 @@
   </head>
   <body>
       
+      <!-- 
     <div class="container-fluid">
       <div class="row">
         <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
@@ -57,9 +59,13 @@
             </li>
           </ul>
         </nav>
+        <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+      -->
 
     <!-- Begin page content -->
-        <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+    <div class="container">
+      <div class="row">
+      <div class="col-sm-8 blog-main">
           <div class="container">
             <div class="mt-1">
               <h1>Hello, world!</h1>
@@ -75,6 +81,38 @@
             </ul>
           </div>
       </div>
+        <div class="col-sm-3 offset-sm-1 blog-sidebar">
+          <div class="sidebar-module sidebar-module-inset">
+            <h4>About</h4>
+            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+          </div>
+          <div class="sidebar-module">
+            <h4>Archives</h4>
+            <ol class="list-unstyled">
+              <li><a href="#">March 2014</a></li>
+              <li><a href="#">February 2014</a></li>
+              <li><a href="#">January 2014</a></li>
+              <li><a href="#">December 2013</a></li>
+              <li><a href="#">November 2013</a></li>
+              <li><a href="#">October 2013</a></li>
+              <li><a href="#">September 2013</a></li>
+              <li><a href="#">August 2013</a></li>
+              <li><a href="#">July 2013</a></li>
+              <li><a href="#">June 2013</a></li>
+              <li><a href="#">May 2013</a></li>
+              <li><a href="#">April 2013</a></li>
+            </ol>
+          </div>
+          <div class="sidebar-module">
+            <h4>Elsewhere</h4>
+            <ol class="list-unstyled">
+              <li><a href="#">GitHub</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Facebook</a></li>
+            </ol>
+          </div>
+        </div><!-- /.blog-sidebar -->
+    </div>
     </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
